--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seedbed-cassandra",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/freeart/seedbed-cassandra/issues"
   },
-  "homepage": "https://github.com/freeart/seedbed-cassandra#readme"
+  "homepage": "https://github.com/freeart/seedbed-cassandra#readme",
+  "dependencies": {
+    "cassandra-driver": "^3.5.0"
+  }
 }
